--- a/fly.toml
+++ b/fly.toml
@@ -1,10 +1,10 @@
-# fly.toml app configuration file generated for url-shortener-quiet-waterfall-698 on 2026-01-19T01:11:15-05:00
+# fly.toml app configuration file generated for url-shortener-dgssyg on 2026-01-19T06:36:56Z
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = 'url-shortener-quiet-waterfall-698'
-primary_region = 'yyz'
+app = 'url-shortener-dgssyg'
+primary_region = 'iad'
 console_command = '/code/manage.py shell'
 
 [build]
@@ -25,6 +25,7 @@ console_command = '/code/manage.py shell'
 
 [[vm]]
   memory = '1gb'
+  cpu_kind = 'shared'
   cpus = 1
   memory_mb = 1024
 
