--- a/fly.toml
+++ b/fly.toml
@@ -3,28 +3,29 @@
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = 'url-shortener-dgssyg'
-primary_region = 'iad'
-console_command = '/code/manage.py shell'
-
-[build]
+app = "url-shortener-dgssyg"
+primary_region = "iad"
+console_command = "/code/manage.py shell"
 
 [deploy]
-release_command = "sh -lc \"python manage.py collectstatic --noinput && python manage.py migrate --noinput\""
+release_command = "python manage.py migrate --noinput"
 
 [env]
-  PORT = '8000'
+  PORT = "8000"
 
 [http_service]
   internal_port = 8000
   force_https = true
-  auto_stop_machines = 'stop'
+  auto_stop_machines = "stop"
   auto_start_machines = true
   min_machines_running = 1
-  processes = ['app']
+  processes = ["app"]
 
 [[vm]]
-  memory = '1gb'
-  cpu_kind = 'shared'
+  memory = "1gb"
+  cpu_kind = "shared"
   cpus = 1
-  memory_mb = 1024
+
+[[statics]]
+  guest_path = "/code/staticfiles"
+  url_prefix = "/static/"
